<resources>
    <string name="app_name">Gym Pal</string>
    <string name="action_settings">Settings</string>
    <string name="chrono">Timer</string>
    <string name="one_hex">OneHex</string>
    <string name="two_hex">TwoHex</string>
    <string name="three_hex">ThreeHex</string>
    <string name="four_hex">FourHex</string>
    <string name="five_hex">FiveHex</string>
    <string name="six_hex">SixHex</string>
    <string name="total_hex">HexTotal</string>
    <string name="clear_btn">Clear</string>
</resources>
