<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="akira.gympal.MainActivity">

    <TextView android:id="@+id/timer_label"
              android:text="@string/chrono"
              android:textSize="20dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
    <Chronometer
            android:id="@+id/timer"
            android:textSize="20dp"
            android:layout_marginLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <View android:layout_width="fill_parent"
          android:layout_height="5dp"
          android:layout_marginTop="60dp"
          android:background="#00bfff" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="100dp"
              android:text="@string/one_hex"
              android:textSize="20dp"
              android:id="@+id/one_hex"
              android:layout_gravity="center_horizontal" />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="100dp"
              android:layout_marginLeft="150dp"
              android:text="@string/four_hex"
              android:textSize="20dp"
              android:id="@+id/four_hex"
              android:layout_gravity="center_horizontal" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="150dp"
              android:text="@string/two_hex"
              android:textSize="20dp"
              android:id="@+id/two_hex"
              android:layout_gravity="center_horizontal" />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="150dp"
              android:layout_marginLeft="150dp"
              android:text="@string/five_hex"
              android:textSize="20dp"
              android:id="@+id/five_hex"
              android:layout_gravity="center_horizontal" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="200dp"
              android:text="@string/three_hex"
              android:textSize="20dp"
              android:id="@+id/three_hex"
              android:layout_gravity="center_horizontal" />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="200dp"
              android:layout_marginLeft="150dp"
              android:text="@string/six_hex"
              android:textSize="20dp"
              android:id="@+id/six_hex"
              android:layout_gravity="center_horizontal" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="250dp"
              android:text="@string/total_hex"
              android:textSize="20dp"
              android:id="@+id/total_hex"
              android:layout_gravity="center_horizontal" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:id="@+id/clear_btn"
            android:text="@string/clear_btn" />
</RelativeLayout>
